finished second classifier, decision tree

--- a/hw2/hw2.ipynb
+++ b/hw2/hw2.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,6 +66,7 @@
     "from sklearn.model_selection import cross_val_score, cross_validate, cross_val_predict\n",
     "from sklearn.metrics import make_scorer, confusion_matrix\n",
     "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
     "from statistics import mean\n",
     "\n",
     "import pandas as pd\n",
@@ -150,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +286,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Rented Bike Count</th>\n      <th>Temperature(C)</th>\n      <th>Humidity(%)</th>\n      <th>Wind speed (m/s)</th>\n      <th>Solar Radiation (MJ/m2)</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>7010.000000</td>\n      <td>7010.000000</td>\n      <td>7010.000000</td>\n      <td>7010.000000</td>\n      <td>7010.000000</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>711.702282</td>\n      <td>12.894479</td>\n      <td>58.472896</td>\n      <td>1.716933</td>\n      <td>0.567655</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>651.263850</td>\n      <td>11.904562</td>\n      <td>20.153850</td>\n      <td>1.035290</td>\n      <td>0.866163</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>0.000000</td>\n      <td>-17.800000</td>\n      <td>11.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>193.000000</td>\n      <td>3.500000</td>\n      <td>43.000000</td>\n      <td>0.900000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>509.000000</td>\n      <td>13.600000</td>\n      <td>57.000000</td>\n      <td>1.500000</td>\n      <td>0.010000</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>1074.000000</td>\n      <td>22.500000</td>\n      <td>74.000000</td>\n      <td>2.300000</td>\n      <td>0.930000</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>3556.000000</td>\n      <td>39.400000</td>\n      <td>98.000000</td>\n      <td>7.400000</td>\n      <td>3.520000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 16
+     "execution_count": 4
     }
    ],
    "source": [
@@ -314,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +345,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Rented Bike Count</th>\n      <th>Temperature(C)</th>\n      <th>Humidity(%)</th>\n      <th>Wind speed (m/s)</th>\n      <th>Solar Radiation (MJ/m2)</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>7010.000000</td>\n      <td>7010.000000</td>\n      <td>7010.000000</td>\n      <td>7010.000000</td>\n      <td>7010.000000</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>0.200141</td>\n      <td>0.536617</td>\n      <td>0.545665</td>\n      <td>0.232018</td>\n      <td>0.161266</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>0.183145</td>\n      <td>0.208122</td>\n      <td>0.231653</td>\n      <td>0.139904</td>\n      <td>0.246069</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>0.054274</td>\n      <td>0.372378</td>\n      <td>0.367816</td>\n      <td>0.121622</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>0.143138</td>\n      <td>0.548951</td>\n      <td>0.528736</td>\n      <td>0.202703</td>\n      <td>0.002841</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>0.302025</td>\n      <td>0.704545</td>\n      <td>0.724138</td>\n      <td>0.310811</td>\n      <td>0.264205</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>1.000000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 17
+     "execution_count": 5
     }
    ],
    "source": [
@@ -398,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {
     "tags": []
    },
@@ -440,23 +441,23 @@
     "knn_euclid_scores = [cross_validate(estimator=knn_euclid[i], X=train_data, y=target, cv=5, scoring=scoring) for i in range(0, len(knn_euclid))]\n",
     "knn_euclid_cost_scores = [compute_cost(confusion_matrix(target, cross_val_predict(knn_euclid[i], train_data, target, cv=5)))  for i in range(0, len(knn_euclid))]\n",
     "\n",
-    "table = tt.Texttable()\n",
-    "table.add_rows([['Results for Manhattan KNN', '', '', '', '', ''],\n",
+    "table_knn_manhat = tt.Texttable()\n",
+    "table_knn_manhat.add_rows([['Results for Manhattan KNN', '', '', '', '', ''],\n",
     "                ['Value of K', 'Accuracy', 'F-measure', 'Recall', 'Precision', 'Cost']\n",
     "])\n",
     "\n",
     "for i in range(0, len(knn_manhat_scores)):\n",
-    "    table.add_row( ['k=' + str(i+1), mean(knn_manhat_scores[i]['test_accuracy']), mean(knn_manhat_scores[i]['test_f1']), mean(knn_manhat_scores[i]['test_recall']), mean(knn_manhat_scores[i]['test_precision']), knn_manhat_cost_scores[i] ])\n",
-    "print(table.draw())\n",
+    "    table_knn_manhat.add_row( ['k=' + str(i+1), mean(knn_manhat_scores[i]['test_accuracy']), mean(knn_manhat_scores[i]['test_f1']), mean(knn_manhat_scores[i]['test_recall']), mean(knn_manhat_scores[i]['test_precision']), knn_manhat_cost_scores[i] ])\n",
+    "print(table_knn_manhat.draw())\n",
     "print()\n",
     "\n",
-    "table = tt.Texttable()\n",
-    "table.add_rows([['Results for Euclidean KNN', '', '', '', '',''],\n",
+    "table_knn_euclid = tt.Texttable()\n",
+    "table_knn_euclid.add_rows([['Results for Euclidean KNN', '', '', '', '',''],\n",
     "                ['Value of K', 'Accuracy', 'F-measure', 'Recall', 'Precision', 'Cost']\n",
     "])\n",
     "for i in range(0, len(knn_euclid_scores)):\n",
-    "    table.add_row( ['k=' + str(i+1), mean(knn_euclid_scores[i]['test_accuracy']), mean(knn_euclid_scores[i]['test_f1']), mean(knn_euclid_scores[i]['test_recall']), mean(knn_euclid_scores[i]['test_precision']), knn_euclid_cost_scores[i] ])\n",
-    "print(table.draw())"
+    "    table_knn_euclid.add_row( ['k=' + str(i+1), mean(knn_euclid_scores[i]['test_accuracy']), mean(knn_euclid_scores[i]['test_f1']), mean(knn_euclid_scores[i]['test_recall']), mean(knn_euclid_scores[i]['test_precision']), knn_euclid_cost_scores[i] ])\n",
+    "print(table_knn_euclid.draw())"
    ]
   },
   {
@@ -491,15 +492,42 @@
     "## Section: 4.1 - Configure the classifier\n",
     "- Use the appropriate classifier from the SciKit Learn library.\n",
     "- Explain all setup, parameters and execution options you chose to set, and why.\n",
-    "***"
+    "***\n",
+    "\n",
+    "For my second classifier, I am using a decision tree. The definition for SciKit's decision tree constructor is:\n",
+    "\n",
+    "```\n",
+    "DecisionTreeClassifier(*, criterion='gini', splitter='best', max_depth=None, min_samples_split=2, min_samples_leaf=1, min_weight_fraction_leaf=0.0, max_features=None, random_state=None, max_leaf_nodes=None, min_impurity_decrease=0.0, min_impurity_split=None, class_weight=None, ccp_alpha=0.0)\n",
+    "```\n",
+    "\n",
+    "Some of the important features or the features I will be changing include:\n",
+    "- criterion- function to use to measure the quality of a split; default = 'gini' for Gini impurity but can also use 'entropy' for information gain\n",
+    "- splitter- strategy that chooses the split at each node; default = 'best' to choose the best split or use 'random' for the best random split\n",
+    "- max_depth- maximum depth of the tree; default = None so the tree will be expanded until all leaves are pure or all leaves contain less than *min_samples_split* samples (see below)\n",
+    "- min_samples_split- minimum number of samples needed to split a node; default = 2;\n",
+    "\n",
+    "### Decision Tree Instantiation\n",
+    "\n",
+    "For my decision tree, I will be trying four different classifiers with different hyperparameter settings. Two trees will be use Gini index to measure splits, and the other two will use entropy. Additionally, one from each group will use the 'best' split strategy while the other classifier in each group will use the 'random' strategy."
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "For my second classifier;"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+    "trees = {\n",
+    "    'gini': {\n",
+    "        'best': DecisionTreeClassifier(criterion='gini', splitter='best'),\n",
+    "        'random': DecisionTreeClassifier(criterion='gini', splitter='random')\n",
+    "    },\n",
+    "    'entropy': {\n",
+    "        'best': DecisionTreeClassifier(criterion='entropy', splitter='best'),\n",
+    "        'random': DecisionTreeClassifier(criterion='entropy', splitter='random')\n",
+    "    }\n",
+    "}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -514,10 +542,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "+----------------+----------+----------+-----------+--------+-----------+------+\n| Decision Tree  |          |          |           |        |           |      |\n| Results        |          |          |           |        |           |      |\n+----------------+----------+----------+-----------+--------+-----------+------+\n| Quality        | Splitter | Accuracy | F-measure | Recall | Precision | Cost |\n| Criterion      |          |          |           |        |           |      |\n+----------------+----------+----------+-----------+--------+-----------+------+\n| Gini           | Best     | 0.921    | 0.914     | 0.914  | 0.914     | 3083 |\n+----------------+----------+----------+-----------+--------+-----------+------+\n| Gini           | Random   | 0.913    | 0.905     | 0.905  | 0.906     | 3073 |\n+----------------+----------+----------+-----------+--------+-----------+------+\n| Entropy        | Best     | 0.927    | 0.920     | 0.921  | 0.920     | 3009 |\n+----------------+----------+----------+-----------+--------+-----------+------+\n| Entropy        | Random   | 0.918    | 0.911     | 0.915  | 0.907     | 2895 |\n+----------------+----------+----------+-----------+--------+-----------+------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "tree_scores = {\n",
+    "    'gini': {\n",
+    "        'best': cross_validate(estimator=trees['gini']['best'], X=train_data, y=target, cv=5, scoring=scoring),\n",
+    "        'random': cross_validate(estimator=trees['gini']['random'], X=train_data, y=target, cv=5, scoring=scoring)\n",
+    "    },\n",
+    "    'entropy': {\n",
+    "        'best': cross_validate(estimator=trees['entropy']['best'], X=train_data, y=target, cv=5, scoring=scoring),\n",
+    "        'random': cross_validate(estimator=trees['entropy']['random'], X=train_data, y=target, cv=5, scoring=scoring)\n",
+    "    }\n",
+    "}\n",
+    "tree_cost_scores = {\n",
+    "    'gini': {\n",
+    "        'best': compute_cost(confusion_matrix(target, cross_val_predict(trees['gini']['best'], train_data, target, cv=5))),\n",
+    "        'random': compute_cost(confusion_matrix(target, cross_val_predict(trees['gini']['random'], train_data, target, cv=5)))\n",
+    "    },\n",
+    "    'entropy': {\n",
+    "        'best': compute_cost(confusion_matrix(target, cross_val_predict(trees['entropy']['random'], train_data, target, cv=5))),\n",
+    "        'random': compute_cost(confusion_matrix(target, cross_val_predict(trees['entropy']['random'], train_data, target, cv=5)))\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "table_trees = tt.Texttable()\n",
+    "table_trees.add_row(['Decision Tree Results', '', '', '', '', '', ''])\n",
+    "table_trees.add_row(['Quality Criterion', 'Splitter', 'Accuracy', 'F-measure', 'Recall', 'Precision', 'Cost'])\n",
+    "\n",
+    "table_trees.add_row(['Gini', 'Best', mean(tree_scores['gini']['best']['test_accuracy']), mean(tree_scores['gini']['best']['test_f1']), mean(tree_scores['gini']['best']['test_recall']), mean(tree_scores['gini']['best']['test_precision']), tree_cost_scores['gini']['best']])\n",
+    "\n",
+    "table_trees.add_row(['Gini', 'Random', mean(tree_scores['gini']['random']['test_accuracy']), mean(tree_scores['gini']['random']['test_f1']), mean(tree_scores['gini']['random']['test_recall']), mean(tree_scores['gini']['random']['test_precision']), tree_cost_scores['gini']['random']])\n",
+    "\n",
+    "table_trees.add_row(['Entropy', 'Best', mean(tree_scores['entropy']['best']['test_accuracy']), mean(tree_scores['entropy']['best']['test_f1']), mean(tree_scores['entropy']['best']['test_recall']), mean(tree_scores['entropy']['best']['test_precision']), tree_cost_scores['entropy']['best']])\n",
+    "\n",
+    "table_trees.add_row(['Entropy', 'Random', mean(tree_scores['entropy']['random']['test_accuracy']), mean(tree_scores['entropy']['random']['test_f1']), mean(tree_scores['entropy']['random']['test_recall']), mean(tree_scores['entropy']['random']['test_precision']), tree_cost_scores['entropy']['random']])\n",
+    "\n",
+    "print(table_trees.draw())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -526,15 +597,12 @@
     "***\n",
     "## Section: 4.3 - Evaluate the choice of the classifier\n",
     "- What characteristics of the problem and data made the classifier a good or bad choice?\n",
-    "***"
+    "***\n",
+    "\n",
+    "I think this classifier is an great choice to use in this situation as it uses basic yes or no questions to come to a conclusion, much in the same way that a human would ask to determine if it is dark outside (e.g., is the sun out? are there a lot of bikes rented out? what is the temperature?).\n",
+    "\n",
+    "The results here show that decision tree classification is a great classifier for this problem when comparing it to KNN in **Section 3**. While most metrics remained the same, the cost improved significantly."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -543,7 +611,21 @@
     "***\n",
     "# Section: 5 - Evaluation of Off-The-Shelf Classifier #3\n",
     "- As with the KNN classifier above, choose another classifier from the SciKit Learn library (Decision Tree, SVM, Logistic Regression, etc.) and run it on the dataset.\n",
-    "***"
+    "***\n",
+    "\n",
+    "For my third classifier, I decided to use SVM. SciKit's definition for SVM is:\n",
+    "\n",
+    "```\n",
+    "SVC(*, C=1.0, kernel='rbf', degree=3, gamma='scale', coef0=0.0, shrinking=True, probability=False, tol=0.001, cache_size=200, class_weight=None, verbose=False, max_iter=- 1, decision_function_shape='ovr', break_ties=False, random_state=None)\n",
+    "```\n",
+    "\n",
+    "The parameters that I will be using or that are common for SVM/SCV are:\n",
+    "- C- regularization parameter; controls how much SVM focuses on a smooth decision boundary vs classifying every training point correctly; larger values of C mean we focus more on getting every single training point correctly classified; default = 1\n",
+    "- kernel- type of function to use in SVM; default = 'rbf' or radial basis function, but other acceptable values include 'linear', 'poly', 'sigmoid', and 'precomputed'\n",
+    "- degree- degree of the polynomial function specified in *kernel*, but only used if *kernel*='poly'; default = 3\n",
+    "- gamma- kernel coefficient used in 'rbf', 'poly', and 'sigmoid' kernels; default = 'scale'\n",
+    "\n",
+    "As I have never used SVM before, I am not quite sure where to begin with the parameter setting. \n"
    ]
   },
   {
@@ -554,7 +636,8 @@
     "## Section: 5.1 - Configure the classifier\n",
     "- Use the appropriate classifier from the SciKit Learn library.\n",
     "- Explain all setup, parameters and execution options you chose to set, and why.\n",
-    "***"
+    "***\n",
+    "\n"
    ]
   },
   {
